fix collapse icon

--- a/app/assets/stylesheets/companion_window.css
+++ b/app/assets/stylesheets/companion_window.css
@@ -327,6 +327,7 @@ body {
   .modal-components-popover,
   .sul-embed-treegrid .folder-title,
   .authLinkWrapper,
+  .sul-embed-geo-sidebar-header,
   .sul-embed-was-seed-list-item {
     svg {
       fill: currentColor;
